Replace telemetry loader with compiling implementation